@@ -1,3 +1,9 @@
+Development Portal (2019-10-29 shi)
+==============================
+Add sector table
+Update SAVi transaction and budget tables
+
+
 Development Portal (2019-10-28 shi)
 ==============================
 Sticky headers and counters for tables
